--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                   <li id="publishDate">Last Published: 2016-05-06
                       <span class="divider">|</span>
                    </li>
-                  <li id="projectVersion">Version: 2.1.0-SNAPSHOT
+                  <li id="projectVersion">Version: 2.1.0
                       </li>
                       
               
