--- a/plugin-updates-report.html
+++ b/plugin-updates-report.html
@@ -141,7 +141,7 @@
                   <li id="publishDate">Last Published: 2016-05-06
                       <span class="divider">|</span>
                    </li>
-                  <li id="projectVersion">Version: 2.1.0-SNAPSHOT
+                  <li id="projectVersion">Version: 2.1.0
                       </li>
                       
               
@@ -261,7 +261,7 @@
 <tr class="a">
 <td><img src="images/icon_success_sml.gif" alt="" /></td>
 <td># of plugins using the latest version available</td>
-<td>31</td></tr>
+<td>32</td></tr>
 <tr class="b">
 <td><img src="images/icon_warning_sml.gif" alt="" /></td>
 <td># of plugins where the next version available is smaller than an incremental version update</td>
@@ -660,6 +660,16 @@
 <th>Dependency status</th></tr>
 <tr class="b">
 <td><img src="images/icon_success_sml.gif" alt="" /></td>
+<td>org.apache.maven.plugins</td>
+<td>maven-gpg-plugin</td>
+<td><b>1.6</b></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td><img src="images/icon_success_sml.gif" alt="" /></td></tr>
+<tr class="a">
+<td><img src="images/icon_success_sml.gif" alt="" /></td>
 <td>org.tinyjee.dim</td>
 <td>doxia-include-macro</td>
 <td><b>1.1</b></td>
@@ -668,7 +678,7 @@
 <td></td>
 <td></td>
 <td><img src="images/icon_success_sml.gif" alt="" /></td></tr>
-<tr class="a">
+<tr class="b">
 <th>Status</th>
 <th>Group Id</th>
 <th>Artifact Id</th>
@@ -684,16 +694,16 @@
 <div class="section">
 <h3><a name="Plugin_org.apache.maven.plugins:maven-antrun-plugin"></a>Plugin org.apache.maven.plugins:maven-antrun-plugin</h3>
 <table border="0" class="table table-striped">
-<tr class="b">
+<tr class="a">
 <th width="80%">Status</th>
 <td><img src="images/icon_success_sml.gif" alt="" />&#160;No newer versions available.</td></tr>
-<tr class="a">
+<tr class="b">
 <th width="80%">Group Id</th>
 <td>org.apache.maven.plugins</td></tr>
-<tr class="b">
+<tr class="a">
 <th width="80%">Artifact Id</th>
 <td>maven-antrun-plugin</td></tr>
-<tr class="a">
+<tr class="b">
 <th width="80%">Current Version</th>
 <td>1.8</td></tr></table></div>
 <div class="section">
@@ -864,6 +874,21 @@
 <tr class="b">
 <th width="80%">Current Version</th>
 <td>2.19.1</td></tr></table></div>
+<div class="section">
+<h3><a name="Plugin_org.apache.maven.plugins:maven-gpg-plugin"></a>Plugin org.apache.maven.plugins:maven-gpg-plugin</h3>
+<table border="0" class="table table-striped">
+<tr class="a">
+<th width="80%">Status</th>
+<td><img src="images/icon_success_sml.gif" alt="" />&#160;No newer versions available.</td></tr>
+<tr class="b">
+<th width="80%">Group Id</th>
+<td>org.apache.maven.plugins</td></tr>
+<tr class="a">
+<th width="80%">Artifact Id</th>
+<td>maven-gpg-plugin</td></tr>
+<tr class="b">
+<th width="80%">Current Version</th>
+<td>1.6</td></tr></table></div>
 <div class="section">
 <h3><a name="Plugin_org.apache.maven.plugins:maven-install-plugin"></a>Plugin org.apache.maven.plugins:maven-install-plugin</h3>
 <table border="0" class="table table-striped">
