--- a/project-summary.html
+++ b/project-summary.html
@@ -141,7 +141,7 @@
                   <li id="publishDate">Last Published: 2016-05-06
                       <span class="divider">|</span>
                    </li>
-                  <li id="projectVersion">Version: 2.1.0-SNAPSHOT
+                  <li id="projectVersion">Version: 2.1.0
                       </li>
                       
               
@@ -326,7 +326,7 @@
 <td>smpp</td></tr>
 <tr class="b">
 <td>Version</td>
-<td>2.1.0-SNAPSHOT</td></tr>
+<td>2.1.0</td></tr>
 <tr class="a">
 <td>Type</td>
 <td>pom</td></tr></table></div></div>
