--- a/property-updates-report.html
+++ b/property-updates-report.html
@@ -141,7 +141,7 @@
                   <li id="publishDate">Last Published: 2016-05-06
                       <span class="divider">|</span>
                    </li>
-                  <li id="projectVersion">Version: 2.1.0-SNAPSHOT
+                  <li id="projectVersion">Version: 2.1.0
                       </li>
                       
               
@@ -261,7 +261,7 @@
 <tr class="a">
 <td><img src="images/icon_success_sml.gif" alt="" /></td>
 <td># of properties using the latest version available</td>
-<td>35</td></tr>
+<td>36</td></tr>
 <tr class="b">
 <td><img src="images/icon_warning_sml.gif" alt="" /></td>
 <td># of properties where the next version available is smaller than an incremental version update</td>
@@ -531,13 +531,21 @@
 <td></td></tr>
 <tr class="a">
 <td><img src="images/icon_success_sml.gif" alt="" /></td>
+<td>${maven-gpg-plugin.version}</td>
+<td>1.6</td>
+<td></td>
+<td></td>
+<td></td>
+<td></td></tr>
+<tr class="b">
+<td><img src="images/icon_success_sml.gif" alt="" /></td>
 <td>${maven-dependency-plugin.version}</td>
 <td>2.10</td>
 <td></td>
 <td></td>
 <td></td>
 <td></td></tr>
-<tr class="b">
+<tr class="a">
 <td><img src="images/icon_success_sml.gif" alt="" /></td>
 <td>${maven-clean-plugin.version}</td>
 <td>3.0.0</td>
@@ -545,7 +553,7 @@
 <td></td>
 <td></td>
 <td></td></tr>
-<tr class="a">
+<tr class="b">
 <td><img src="images/icon_success_sml.gif" alt="" /></td>
 <td>${maven-failsafe-plugin.version}</td>
 <td>2.19.1</td>
@@ -553,7 +561,7 @@
 <td></td>
 <td></td>
 <td></td></tr>
-<tr class="b">
+<tr class="a">
 <td><img src="images/icon_warning_sml.gif" alt="" /></td>
 <td>${maven-changes-plugin.version}</td>
 <td>2.11</td>
@@ -561,7 +569,7 @@
 <td></td>
 <td><b>2.12</b></td>
 <td></td></tr>
-<tr class="a">
+<tr class="b">
 <td><img src="images/icon_success_sml.gif" alt="" /></td>
 <td>${maven-deploy-plugin.version}</td>
 <td>2.8.2</td>
@@ -569,7 +577,7 @@
 <td></td>
 <td></td>
 <td></td></tr>
-<tr class="b">
+<tr class="a">
 <td><img src="images/icon_success_sml.gif" alt="" /></td>
 <td>${maven-ejb-plugin.version}</td>
 <td>2.5.1</td>
@@ -577,7 +585,7 @@
 <td></td>
 <td></td>
 <td></td></tr>
-<tr class="a">
+<tr class="b">
 <td><img src="images/icon_warning_sml.gif" alt="" /></td>
 <td>${maven-resources-plugin.version}</td>
 <td>2.7</td>
@@ -585,7 +593,7 @@
 <td></td>
 <td></td>
 <td><b>3.0.0</b></td></tr>
-<tr class="b">
+<tr class="a">
 <td><img src="images/icon_success_sml.gif" alt="" /></td>
 <td>${maven-compiler-plugin.version}</td>
 <td>3.5.1</td>
@@ -593,7 +601,7 @@
 <td></td>
 <td></td>
 <td></td></tr>
-<tr class="a">
+<tr class="b">
 <td><img src="images/icon_success_sml.gif" alt="" /></td>
 <td>${buildnumber-maven-plugin.version}</td>
 <td>1.4</td>
@@ -601,7 +609,7 @@
 <td></td>
 <td></td>
 <td></td></tr>
-<tr class="b">
+<tr class="a">
 <td><img src="images/icon_success_sml.gif" alt="" /></td>
 <td>${maven-project-info-reports-plugin.version}</td>
 <td>2.9</td>
@@ -609,7 +617,7 @@
 <td></td>
 <td></td>
 <td></td></tr>
-<tr class="a">
+<tr class="b">
 <th>Status</th>
 <th>Property</th>
 <th>Current Version</th>
@@ -623,31 +631,31 @@
 <div class="section">
 <h3><a name="aappassembler-maven-plugin.version"></a>${appassembler-maven-plugin.version</h3>
 <table border="0" class="table table-striped">
-<tr class="b">
+<tr class="a">
 <th width="80%">Status</th>
 <td><img src="images/icon_success_sml.gif" alt="" />&#160;No newer versions available.</td></tr>
-<tr class="a">
+<tr class="b">
 <th width="80%">Property</th>
 <td>${appassembler-maven-plugin.version}</td></tr>
-<tr class="b">
+<tr class="a">
 <th width="80%">Associated artifacts</th>
 <td>org.codehaus.mojo:appassembler-maven-plugin</td></tr>
-<tr class="a">
+<tr class="b">
 <th width="80%">Current Version</th>
 <td>1.10</td></tr>
-<tr class="b">
+<tr class="a">
 <th width="80%">Allowed version range</th>
 <td>[,)</td></tr>
-<tr class="a">
+<tr class="b">
 <th width="80%">Infer associations from project</th>
 <td>Yes</td></tr>
-<tr class="b">
+<tr class="a">
 <th width="80%">Only use release versions</th>
 <td>No</td></tr>
-<tr class="a">
+<tr class="b">
 <th width="80%">Include projects from reactor</th>
 <td>Yes</td></tr>
-<tr class="b">
+<tr class="a">
 <th width="80%">Always use reactor projects (even if older or -SNAPSHOT)</th>
 <td>Yes</td></tr></table></div>
 <div class="section">
@@ -1181,6 +1189,36 @@
 <tr class="b">
 <th width="80%">Current Version</th>
 <td>2.19.1</td></tr>
+<tr class="a">
+<th width="80%">Allowed version range</th>
+<td>[,)</td></tr>
+<tr class="b">
+<th width="80%">Infer associations from project</th>
+<td>Yes</td></tr>
+<tr class="a">
+<th width="80%">Only use release versions</th>
+<td>No</td></tr>
+<tr class="b">
+<th width="80%">Include projects from reactor</th>
+<td>Yes</td></tr>
+<tr class="a">
+<th width="80%">Always use reactor projects (even if older or -SNAPSHOT)</th>
+<td>Yes</td></tr></table></div>
+<div class="section">
+<h3><a name="amaven-gpg-plugin.version"></a>${maven-gpg-plugin.version</h3>
+<table border="0" class="table table-striped">
+<tr class="a">
+<th width="80%">Status</th>
+<td><img src="images/icon_success_sml.gif" alt="" />&#160;No newer versions available.</td></tr>
+<tr class="b">
+<th width="80%">Property</th>
+<td>${maven-gpg-plugin.version}</td></tr>
+<tr class="a">
+<th width="80%">Associated artifacts</th>
+<td>org.apache.maven.plugins:maven-gpg-plugin</td></tr>
+<tr class="b">
+<th width="80%">Current Version</th>
+<td>1.6</td></tr>
 <tr class="a">
 <th width="80%">Allowed version range</th>
 <td>[,)</td></tr>
